frontend/test/should_pass/dpo_007.grg
rule r {
	pattern {
	    x:Node;
        dpo(x);
	}
	modify {
	}
}

