frontend/test/should_fail/rhslhs2.grg
pattern p(n:Node)
{
	modify {
	}
}

rule r
{
	:p(n);
	
	modify {
		n:Node;
	}
}
